@@ -13,6 +13,7 @@
 * Fix watch line expression to catch 4.x series tarballs (Debian patch LP ID #1076897)
 * Allow tests to pass successfully when run as root
 * Fix cssh starting if xterm is not installed (Sf bug 3494988)
+* Set WM_CLASS on windows to 'cssh' (Sf bug 3187736)
 
 2012-12-09 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_02
 * Fix logic when using 'autoclose' on the command line or config file
